--- a/package.json
+++ b/package.json
@@ -85,8 +85,7 @@
         "displayName": "UI: Orders module is enabled",
         "visible": false,
         "subPermissions": [
-          "mod-settings.entries.collection.get",
-          "mod-settings.global.read.stripes-core.prefs.manage"
+          "stripes-core.settings.read"
         ]
       },
       {
@@ -94,8 +93,7 @@
         "displayName": "Settings (Orders): Can view and edit settings",
         "subPermissions": [
           "settings.enabled",
-          "mod-settings.entries.collection.get",
-          "mod-settings.global.read.stripes-core.prefs.manage"
+          "stripes-core.settings.read"
         ],
         "visible": false
       },
