--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
       "search-inventory": "1.0",
       "tags": "1.0",
       "template-engine": "2.0",
+      "tenant-addresses": "1.0",
       "titles": "1.2",
       "users": "15.0 16.0"
     },
@@ -139,7 +140,6 @@
           "isbn-utils.convert-to-13.get",
           "isbn-utils.validator.get",
           "mod-settings.global.read.ui-tags.tags.manage",
-          "mod-settings.global.read.ui-tenant-settings.addresses.manage",
           "note.types.collection.get",
           "note.links.collection.get",
           "organizations.organizations.collection.get",
@@ -148,6 +148,7 @@
           "search.facets.collection.get",
           "tags.collection.get",
           "tags.item.post",
+          "tenant-addresses.collection.get",
           "usergroups.collection.get",
           "users.collection.get",
           "users.item.get"
